--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,3 +1,4 @@
+@import-normalize;
 @custom-media --viewport-medium (max-width: 1000px);
 @custom-selector :--heading h1, h2, h3, h4, h5, h6;
 
@@ -9,7 +10,8 @@
 
 body {
   color: var(--fontColor);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   margin: 0;
 }
 
